--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@lottiefiles/react-lottie-player": "^3.4.2",
+    "apexcharts": "^3.33.2",
+    "axios": "^0.26.1",
+    "gsap": "^3.9.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "17.0.2",
+    "react-lottie-player": "^1.4.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
