--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@lottiefiles/react-lottie-player": "^3.4.2",
+    "@types/react-calendar": "^3.5.0",
     "apexcharts": "^3.33.2",
     "axios": "^0.26.1",
     "gsap": "^3.9.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "17.0.2",
     "react-lottie-player": "^1.4.1",
     "react-redux": "^7.2.6",
