--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.33.2",
     "axios": "^0.26.1",
     "gsap": "^3.9.1",
+    "moment": "^2.29.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
