--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.9.1",
     "moment": "^2.29.1",
     "next": "12.1.0",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.0",
