--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
