--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@lottiefiles/react-lottie-player": "^3.4.2",
+    "@react-pdf/renderer": "^2.1.1",
     "@types/react-calendar": "^3.5.0",
     "apexcharts": "^3.33.2",
     "axios": "^0.26.1",
