--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@lottiefiles/react-lottie-player": "^3.4.2",
+    "@react-pdf-viewer/core": "^3.1.2",
     "@react-pdf/renderer": "^2.1.1",
     "@types/react-calendar": "^3.5.0",
     "apexcharts": "^3.33.2",
@@ -27,6 +28,7 @@
     "react-calendar": "^3.7.0",
     "react-dom": "17.0.2",
     "react-lottie-player": "^1.4.1",
+    "react-pdf": "^5.7.1",
     "react-redux": "^7.2.6",
     "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
