--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-calendar": "^3.5.0",
     "apexcharts": "^3.33.2",
     "axios": "^0.26.1",
+    "firebase": "^9.6.9",
     "gsap": "^3.9.1",
     "moment": "^2.29.1",
     "next": "12.1.0",
