mega update emails,user

--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "@types/react-calendar": "^3.5.0",
     "apexcharts": "^3.33.2",
     "axios": "^0.26.1",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.6.9",
     "gsap": "^3.9.1",
+    "imap-simple": "^5.1.0",
+    "lodash": "^4.17.21",
+    "mailparser": "^3.5.0",
     "moment": "^2.29.1",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
+    "nodemailer": "^6.7.5",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
